# Boost-Web-Server

./: .editorconfig  .gitignore  CMakeLists.txt  Readme.md
configs/: api_test_config  main_config  port_config  test_config
credentials/: console.html  login.html  signup.html
docker/: Dockerfile  base.Dockerfile  cloudbuild.yaml  coverage.Dockerfile
include/: api_console_handler.h  config_parser.h  constants.h  header.h  mime_types.h  mock_session.h  profile_manager.h  reply.h  request.h  request_404_handler.h  request_api_handler.h  request_authentication_handler.h  request_echo_handler.h  request_error_handler.h  request_handler.h  request_health_handler.h  request_parser.h  request_sleep_handler.h  request_static_handler.h  server.h  session.h  session_interface.h  user_profile.h
include/handler_factories/: api_console_handler_factory.h  api_handler_factory.h  authentication_handler_factory.h  echo_handler_factory.h  handler404factory.h  health_handler_factory.h  request_handler_factory.h  sleep_handler_factory.h  static_handler_factory.h
src/: api_console_handler.cc  config_parser.cc  mime_types.cc  profile_manager.cc  reply.cc  request_404_handler.cc  request_api_handler.cc  request_authentication_handler.cc  request_echo_handler.cc  request_error_handler.cc  request_health_handler.cc  request_parser.cc  request_sleep_handler.cc  request_static_handler.cc  server.cc  server_main.cc  session.cc
src/handler_factories/: api_console_handler_factory.cc  api_handler_factory.cc  authentication_handler_factory.cc  echo_handler_factory.cc  handler404factory.cc  health_handler_factory.cc  sleep_handler_factory.cc  static_handler_factory.cc
static_files/static1/: example.html  example.txt
tests/: api_console_handler_test.cc  api_integration_tests.sh  authentication_handler_test.cc  config_parser_test.cc  example_config  example_config_10  example_config_11  example_config_12  example_config_13  example_config_14  example_config_15  example_config_2  example_config_4  example_config_5  example_config_6  example_config_7  example_config_8  example_config_9  integ_test_example_expected  integ_test_health_expected  integ_test_html_res_expected  integ_test_valid_auth_signup_expected  integ_test_valid_req_expected  integration_tests.sh  mime_types_test.cc  outofrange_config  paths_config  profile_manager_test.cc  reply_test.cc  request_404_handler_test.cc  request_api_handler_test.cc  request_echo_handler_test.cc  request_error_handler_test.cc  request_health_handler_test.cc  request_parser_test.cc  request_sleep_handler_test.cc  request_static_handler_test.cc  server_test.cc  session_test.cc  test_config
